# local-rag

./: .gitignore  README.md  docker-compose.yaml  env  load-pdf.py  main.py  pyproject.toml  requirements.txt  run_api.py  run_cli.py
app/: __init__.py  __main__.py  api-main.py  api_main.py  cli-main.py  cli_main.py  config.toml
app/adapters/: __init__.py  docker_embedder.py  docker_llm.py  embedder.py  factory.py  llm.py  vectorstore.py
app/core/: __init__.py  exceptions.py  models.py
app/services/: __init__.py  document_ingest_service.py  pdf_ingest_service.py  qa_service.py
app/utils/: config.py  io.py  logger.py
